* Enhancement: Class TGroup can be used as a container for controls:
  @ ..., ... OF oGroup. Please review samples/TestGrp.prg

* Enhancement: Minor changes in Class TSay

* Fixed samples/TestGrp.prg, broken due to recent changes in window/dialog
  dimensions.

* Fixed samples/TestGet.prg, broken due to recent changes in windows/dialog
  dimensions.

* New: Class TCoverFlow and @ ..., ... COVERFLOW ...
  Please review samples/TestCovf.prg. Thanks to Manuel Alvarez!

* New: Class TMovie and @ ..., ... MOVIE ...
   Please review samples/TestMov.prg. Thanks to Manuel Alvarez!

* New: Class TWebView and @ ..., ... WEBVIEW ... URL ... 
  Please review samples/TestWeb.prg. Thanks to Manuel Alvarez!

* New: REDEFINE COMBOBOX [ oCbx VAR ] cVar ID nId OF oWnd is already
  available. Please review samples/TestNib.prg

* New: REDEFINE CHECKBOX [ oChk VAR ] lVar ID nId OF oWnd is working!
  Please revew samples/TestNib.prg

* New: REDEFINE GET [ oGet VAR ] cVar ID nId OF oWnd is working!
  Please review samples/TestNib.prg

* New: REDEFINE BUTTON oBtn ID nId OF oWnd is working! Please review
  samples/TestNib.prg

* New: First implementation for: DEFINE WINDOW oWnd RESOURCE cNibName
  Please review samples/TestNib.prg

* New: First tests using NIB files!!! Thanks to Manuel Alvarez.
  Please review samples/TestNib.prg

* Fix: Coordinates were also messed in Class TDialog. Now they are fine.

* Fix: Coordinates were messed in Class TWindow. Now the specified coordinates
  are right:

  DEFINE WINDOW oWnd FROM nTop, nLeft TO nBottom, nRight

  Please keep in mind that nBottom is closer to the top of the screen. OSX uses
  0, 0 in left, bottom position of the screen.

* New: functions ScreenWidth() and ScreenHeight() returns the width and height
  of the entire desktop.

* New: Class TWBrowse Methods SetIndicatorDescent(), SetIndicatorAscend(),
  SetSelectorStyle().

* Enhancement: GETs are now assigned on each change.
